syntax = "proto3";

package nft;

import "koinos/options.proto";

// @description Returns the token's name
// @read-only true
message name_arguments {
}

message name_result {
   string value = 1;
}

// @description Returns the token's uri
// @read-only true
message uri_arguments {
}

message uri_result {
   string value = 1;
}

// @description Returns the token's symbol
// @read-only true
message symbol_arguments {
}

message symbol_result {
   string value = 1;
}

// @description Gets the balance of an owner
// @read-only true
message balance_of_arguments {
   bytes owner = 1 [(koinos.btype) = ADDRESS];
}

message balance_of_result {
   uint64 value = 1 [jstype = JS_STRING];
}

// @description Gets the owner of a token
// @read-only true
message owner_of_arguments {
   bytes token_id = 1 [(koinos.btype) = HEX];
}

message owner_of_result {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

// @description Gets approved address for a token
// @read-only true
message get_approved_arguments {
   bytes token_id = 1 [(koinos.btype) = HEX];
}

message get_approved_result {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

// @description Checks if an operator is approved by an owner
// @read-only true
message is_approved_for_all_arguments {
   bytes owner = 1 [(koinos.btype) = ADDRESS];
   bytes operator = 2 [(koinos.btype) = ADDRESS];
}

message is_approved_for_all_result {
   bool value = 1;
}

// @description Mints a new token
// @read-only false
message mint_arguments {
   bytes to = 1 [(koinos.btype) = ADDRESS];
   bytes token_id = 2 [(koinos.btype) = HEX];
}

message mint_result {
   bool value = 1;
}

// @description Transfers a token
// @read-only false
message transfer_arguments {
   bytes from = 1 [(koinos.btype) = ADDRESS];
   bytes to = 2 [(koinos.btype) = ADDRESS];
   bytes token_id = 3 [(koinos.btype) = HEX];
}

message transfer_result {
   bool value = 1;
}

// @description Approves an address to transfer a token
// @read-only false
message approve_arguments {
   bytes approver_address = 1 [(koinos.btype) = ADDRESS];
   bytes to = 2 [(koinos.btype) = ADDRESS];
   bytes token_id = 3 [(koinos.btype) = HEX];
}

message approve_result {
   bool value = 1;
}

// @description Approves or revokes an address to operate on all tokens owned by caller
// @read-only false
message set_approval_for_all_arguments {
   bytes approver_address = 1 [(koinos.btype) = ADDRESS];
   bytes operator_address = 2 [(koinos.btype) = ADDRESS];
   bool approved = 3;
}

message set_approval_for_all_result {
   bool value = 1;
}

// @description Reserve a number of tokens for whitelist claiming
// @read-only false
message reserve_arguments {
   uint64 amount = 1 [jstype = JS_STRING];
}

message reserve_result {
   bool value = 1;
}

// @description Assign a number of reserved tokens to an address
// @read-only false
message whitelist_arguments {
   bytes address = 1 [(koinos.btype) = ADDRESS];
   uint64 amount = 2 [jstype = JS_STRING];
}

message whitelist_result {
   bool value = 1;
}

// @description Checks whether address has been assigned any whitelist spots
// @read-only true
message is_whitelisted_arguments {
   bytes address = 1 [(koinos.btype) = ADDRESS];
}

message is_whitelisted_result {
   bool value = 1;
}

// @description Gets the total number of minted tokens
// @read-only true
message total_supply_arguments {
}

message total_supply_result {
   uint64 value = 1 [jstype = JS_STRING];
}

// @description Gets the total number of reserved tokens
// @read-only true
message total_reserved_arguments {
}

message total_reserved_result {
   uint64 value = 1 [jstype = JS_STRING];
}

// @description Returns collection royalties
// @read-only true
message royalties_arguments {
}

message royalties_result {
   repeated royalty_object value = 1;
}

// @description Unsupported
// @read-only false
message set_royalties_arguments {
   repeated royalty_object value = 1;
}

message set_royalties_result {
   bool value = 1;
}

// @description Returns collection owner
// @read-only true
message owner_arguments {
}
message owner_result {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

// @description Unsupported
// @read-only false
message transfer_ownership_arguments {
   bytes owner = 1 [(koinos.btype) = ADDRESS];
}
message transfer_ownership_result {
   bool value = 1;
}

// events
message mint_event {
   bytes to = 1 [(koinos.btype) = ADDRESS];
   bytes token_id = 2 [(koinos.btype) = HEX];
}

message transfer_event {
   bytes from = 1 [(koinos.btype) = ADDRESS];
   bytes to = 2 [(koinos.btype) = ADDRESS];
   bytes token_id = 3 [(koinos.btype) = HEX];
}

message operator_approval_event {
   bytes approver_address = 1 [(koinos.btype) = ADDRESS];
   bytes operator_address = 2 [(koinos.btype) = ADDRESS];
   bool approved = 3;
}

message token_approval_event {
   bytes approver_address = 1 [(koinos.btype) = ADDRESS];
   bytes to = 2 [(koinos.btype) = ADDRESS];
   bytes token_id = 3 [(koinos.btype) = HEX];
}

// objects
message token_object {
   bytes owner = 1 [(koinos.btype) = ADDRESS];
}

message balance_object {
   uint64 value = 1 [jstype = JS_STRING];
}

message royalty_object {
   uint64 amount = 1 [jstype = JS_STRING];
   bytes address = 2 [(koinos.btype) = ADDRESS];
}

message token_approval_object {
   bytes address = 1 [(koinos.btype) = ADDRESS];
}

message operator_approval_object {
   bool approved = 1;
}